Frontend: Bug-Fix: MessagesScrollBar! Important

--- a/frontend/assets/scss/styles.scss
+++ b/frontend/assets/scss/styles.scss
@@ -8,7 +8,7 @@ $theme_color: #00c853;
 
 $chats_list_with: 350px;
 $header_height: 60px;
-$send_message_section_height: 60px;
+$send_message_section_height: 70px;
 
 $bk_desktop_mini: 1100px;
 $bk_mobile: 920px;
@@ -30,7 +30,7 @@ $bk_mobile: 920px;
 }
 
 html {
-  overflow-y: hidden;
+  overflow-y: hidden !important;
 }
 
 body,
@@ -317,22 +317,28 @@ body,
   z-index: 90;
 }
 
-.messages-scroll {
-  overflow-y: visible;
-  max-height: calc(100% - #{$header_height} - #{$send_message_section_height});
+.v-application .messages-scroll {
+  max-height: calc(100vh - #{$header_height} - #{$send_message_section_height});
+  min-height: calc(100vh - #{$header_height} - #{$send_message_section_height});
+  overflow-y: scroll;
+  padding-bottom: 15px;
+
+  display: flex;
+  flex-direction: column-reverse;
+
+  &::-webkit-scrollbar-thumb {
+    background: $color_1;
+  }
 }
 
 .messages_list {
   width: 100%;
   height: 100%;
-  height: calc(
-    100vh - #{$header_height} - #{$send_message_section_height} - 20px
-  );
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+
   padding: 30px;
-  padding-bottom: 0px;
+  padding-bottom: 0;
+
+  display: block;
   .message_row {
     display: flex;
     width: 100%;
@@ -464,6 +470,8 @@ body,
   .send_box {
     position: relative;
     padding-top: 16px;
+    // .send_message_section .send_box
+    margin-top: -5px;
     .v-text-field .v-text-field__details {
       display: none;
     }
